fix(BB-426): Wrap text only on specific buttons
A previous fix in PR #378 was causing an issue.
We only want this text wrap behavior on buttons with a lot of text, so add a class selector.

--- a/src/client/stylesheets/style.less
+++ b/src/client/stylesheets/style.less
@@ -426,6 +426,6 @@ hr.wide {
 	}
 }
 
-.btn{
+.btn.wrap {
 	white-space: normal;
 }
